chore: update plugin-publish, upgrade Gradle